--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <p style="text-align:center;max-width:800px;margin:auto;">
 I’m a Unity developer with 5+ years of experience building  
 <strong>gameplay systems, combat loops, AI, UI architecture, multiplayer frameworks, VR mechanics, and large-scale mobile features.</strong>  
-My favorite part of development is shaping the invisible logic beneath the world — the heartbeat that makes a game feel alive.
+I enjoy creating the invisible logic that gives a game its heartbeat and brings worlds to life.
 </p>
 </section>
 
@@ -178,74 +178,109 @@ My favorite part of development is shaping the invisible logic beneath the world
 
 <div class="projects">
 
+    <!-- NURVEIL -->
     <div class="card">
         <h3>Nurveil: The Eyes of Light</h3>
         <div class="role">Mobile RPG — Core Systems</div>
         <div class="tech">Unity • C# • Firebase</div>
-        <p>Combat, AI, inventory, NPCs, puzzles, shops, mobile optimization.</p>
+        <p><i>In Development — Yet to be Released</i></p>
+        <p>Deep RPG featuring combat, exploration, puzzles, shops, and AI systems.</p>
+        <p><b>Link:</b> 
+            <a href="https://drive.google.com/drive/folders/1qUa0dzF_i9TLK-EEAjVo16XHSIsQ5mMS" target="_blank">
+                Project Folder
+            </a>
+        </p>
     </div>
 
+    <!-- ROYAL MARATHA -->
     <div class="card">
         <h3>Royal Maratha (VR)</h3>
         <div class="role">Primary Developer</div>
         <div class="tech">Unity • OpenXR • C#</div>
-        <p>VR melee combat, enemy waves, projectiles, HUD, testing & improvements.</p>
+        <p>VR sword combat, enemy waves, projectiles, and immersive battlefield gameplay.</p>
+        <p><b>Link:</b> 
+            <a href="https://youtu.be/-hoqSp7TJNY?si=YIb9zlDXF9-o0D-O" target="_blank">
+                Gameplay Video
+            </a>
+        </p>
     </div>
 
+    <!-- CHEESE CHASE -->
     <div class="card">
         <h3>Nostril Cheese Chase</h3>
         <div class="role">Gameplay & VFX</div>
         <div class="tech">Unity • Firebase</div>
-        <p>Endless runner controls, animations, customization, cloud save.</p>
+        <p>Endless runner with smooth controls, animations, customization, and cloud save.</p>
+        <p><b>Link:</b> 
+            <a href="https://play.google.com/store/apps/details?id=com.cheesechase&pcampaignid=web_share" target="_blank">
+                Play Store
+            </a>
+        </p>
     </div>
 
+    <!-- COOKIE GAMER -->
     <div class="card">
         <h3>Cookie Gamer</h3>
         <div class="role">Feature Developer</div>
         <div class="tech">Unity • WebGL</div>
-        <p>Farming systems, building upgrades, army/defense logic, bug fixes.</p>
+        <p>Farming-strategy game with resource management, upgrades, and combat-defense systems.</p>
+        <p><b>Link:</b> 
+            <a href="https://cookiegamer.ca/" target="_blank">
+                Play Web Version
+            </a>
+        </p>
     </div>
 
+    <!-- FAIRYTALE FRENZY -->
     <div class="card">
         <h3>Fairytale Frenzy</h3>
         <div class="role">Systems & Integrations</div>
         <div class="tech">Unity • Branch IO • ReadyPlayerMe</div>
-        <p>Referral system, avatar system, friends system.</p>
+        <p>Match-3 adventure with referral system, avatar system & social features.</p>
+        <p><b>Link:</b> 
+            <a href="https://play.google.com/store/apps/details?id=com.tymediaus.fairytale&pcampaignid=web_share" target="_blank">
+                Play Store
+            </a>
+        </p>
     </div>
 
+    <!-- WORD WRAP -->
     <div class="card">
         <h3>Word Wrap</h3>
         <div class="role">Primary Developer</div>
         <div class="tech">Unity • Colyseus</div>
-        <p>Multiplayer logic, UI flow, data simulation, core gameplay.</p>
+        <p>Multiplayer word puzzle with real-time sessions, UI flow & data simulation.</p>
+        <p><b>Link:</b> 
+            <a href="https://play.google.com/store/apps/details?id=com.BazanEnterprises.WordWrap&pcampaignid=web_share" target="_blank">
+                Play Store
+            </a>
+        </p>
     </div>
 
+    <!-- HUNT & ESCAPE -->
     <div class="card">
         <h3>Hunt and Escape</h3>
         <div class="role">Primary Developer</div>
         <div class="tech">Unity</div>
-        <p>Treasure hunt system, riddles, UI, backend data flow.</p>
+        <p>Scavenger + treasure hunt with riddles, exploration & progression.</p>
+        <p><b>Link:</b> 
+            <a href="https://play.google.com/store/apps/details?id=com.RanaItinerans.HuntAndEscape&pcampaignid=web_share" target="_blank">
+                Play Store
+            </a>
+        </p>
     </div>
 
-    <div class="card">
-        <h3>Albastini Card Game</h3>
-        <div class="role">Primary Developer</div>
-        <div class="tech">Unity • Colyseus</div>
-        <p>Card logic, multiplayer integration, UI, fixes & improvements.</p>
-    </div>
-
+    <!-- BLUEBERRY GAMES -->
     <div class="card">
         <h3>Blueberry Games</h3>
         <div class="role">Game Developer</div>
         <div class="tech">Unity</div>
-        <p>Developed major games, reusable systems, API data handling.</p>
-    </div>
-
-    <div class="card">
-        <h3>Cricket Paper</h3>
-        <div class="role">Game Systems</div>
-        <div class="tech">Unity • Photon</div>
-        <p>Scoring algorithm, player interaction, API simulation, fixes.</p>
+        <p>A library of casual games with reusable systems & live data interactions.</p>
+        <p><b>Link:</b> 
+            <a href="https://play.google.com/store/apps/details?id=com.novotraxcorp.blueberrygames&pcampaignid=web_share" target="_blank">
+                Play Store
+            </a>
+        </p>
     </div>
 
 </div>
