--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ I love crafting digital worlds and making invisible logic feel alive to the play
     <!-- NURVEIL -->
     <div class="card">
         <h3 class="neon">Nurveil: The Eyes of Light</h3>
-        <div class="role">Mobile RPG — Core Systems</div>
+        <div class="role">Primary Developer</div>
         <div class="tech">Unity • C# • Firebase</div>
         <p><i>In Development — Yet to be Released</i></p>
         <p>Deep RPG with combat, puzzles, exploration, inventory, and AI systems.</p>
@@ -287,7 +287,7 @@ I love crafting digital worlds and making invisible logic feel alive to the play
     <!-- CHEESE CHASE -->
     <div class="card">
         <h3 class="neon">Nostril Cheese Chase</h3>
-        <div class="role">Gameplay & VFX</div>
+        <div class="role">Gameplay</div>
         <div class="tech">Unity • Firebase</div>
         <p>Endless runner with VFX, animations, and smooth movement systems.</p>
         <p><b>Link:</b> 
